--- a/Index1.html
+++ b/Index1.html
@@ -19,7 +19,7 @@ function giaiPtbac1(a, b){
            }
         }
     } else {
-       document.write('nghiệm là ' + -b/a)
+       document.write('PT '+a+'x+' +b+" có nghiệm là " +-b/a)
     }
 }
 
